ensure evaluation metrics section is left aligned

--- a/x-pack/plugins/ml/public/application/data_frame_analytics/pages/analytics_exploration/components/classification_exploration/_classification_exploration.scss
+++ b/x-pack/plugins/ml/public/application/data_frame_analytics/pages/analytics_exploration/components/classification_exploration/_classification_exploration.scss
@@ -43,7 +43,5 @@ $labelColumnWidth: 80px;
 }
 
 .mlDataFrameAnalyticsClassification__evaluationMetrics {
-  width: 80%;
-  padding-left: 10%;
-  padding-right: 10%;
+  width: 60%;
 }
